# rust-nntp

./: Cargo.toml
.github/workflows/: rust.yml
examples/: fetch_articles.rs  index_group.rs  indexer.rs
src/: capabilities.rs  client.rs  error.rs  lib.rs  nntp.rs  response.rs  stream.rs
src/response/: headers.rs  mod.rs  response.rs
