[package]

name = "nntp"
version = "0.0.5"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
bufstream = "0.1"
prettytable-rs = "0.8.0"
native-tls = "0.2.2"
