[package]

name = "nntp"
version = "0.0.5"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bufstream = "0.1"
prettytable-rs = "0.8.0"
native-tls = "0.2.2"
pretty-bytes = "0.2.2"
itertools = "0.8.0"
log = "0.4.6"
simple_logger = "1.0.1"
yenc = "0.1.1"
flate2 = "1.0.7"
